<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleLabelTv"
        android:textSize="32sp"
        android:textStyle="bold"
        android:id="@+id/titleTv"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" />




    <!-- Height controls -->

    <!-- Height plus button -->
    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/heightPlusBtn"
        android:text="@string/heightPlusBtn"
        app:layout_constraintEnd_toStartOf="@id/heightIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightIL"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@id/heightPlusBtn"
        app:layout_constraintEnd_toStartOf="@id/heightMinusBtn"
        app:layout_constraintStart_toEndOf="@id/heightPlusBtn"
        app:layout_constraintTop_toBottomOf="@id/titleTv"
        app:layout_constraintTop_toTopOf="@id/heightPlusBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/heightInputHint"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/heightMinusBtn"
        android:text="@string/heightMinusBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/heightIL"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />


    <!-- ################################################################ -->

    <!-- Weight controls -->
    <!-- Weight plus button       -->
    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/weightPlusBtn"
        android:text="@string/heightPlusBtn"
        app:layout_constraintEnd_toStartOf="@id/weightIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heightIL" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightIL"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/weightMinusBtn"
        app:layout_constraintStart_toEndOf="@id/weightPlusBtn"
        app:layout_constraintTop_toBottomOf="@id/heightIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/weightInputHint"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Weight minus button       -->
    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/weightMinusBtn"
        android:text="@string/heightMinusBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weightIL"
        app:layout_constraintTop_toBottomOf="@id/heightIL" />

    <!-- ################################################################ -->

    <!-- Result -->
    <!-- Result text view -->

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/calculateBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculateBtn"
        app:layout_constraintBottom_toTopOf="@id/resultTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightIL" />





</androidx.constraintlayout.widget.ConstraintLayout>